--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -48,6 +48,20 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="black_text_color">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="red_color_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#fd5840</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="login_using_social_media">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
