--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -86,4 +86,12 @@
         <item name="android:background">@drawable/auth_edit_text</item>
     </style>
 
+    <style name="search_edit_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/search_et_design</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
 </resources>
