category recycler view

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -32,7 +32,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/auth_main_cost_layout</item>
     </style>
-    
+
     <style name="main_card_header">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -92,6 +92,21 @@
         <item name="android:background">@drawable/search_et_design</item>
         <item name="android:textSize">15sp</item>
         <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="category_image_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/category_image_design</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="category_text_view_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">5dp</item>
     </style>
 
 </resources>
