--- a/app/src/main/res/layout/best_deals_recycler_item.xml
+++ b/app/src/main/res/layout/best_deals_recycler_item.xml
@@ -43,6 +43,7 @@
                     android:layout_height="100dp"
                     android:layout_marginStart="16dp"
                     android:scaleType="fitXY"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView6"
                     app:layout_constraintTop_toTopOf="parent" />
