--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -109,4 +109,10 @@
         <item name="android:padding">5dp</item>
     </style>
 
+    <style name="product_catalogue_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/product_catalogue_drawable</item>
+    </style>
+
 </resources>
