--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:icon="@drawable/notification"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always"/>
 </menu>
