--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,15 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.quantam.it.assignment.ui.home.fragments.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:id="@+id/nav_profile"
+        android:name="com.quantam.it.assignment.ui.home.fragments.profile.GalleryFragment"
+        android:label="@string/menu_profile"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_log_out"
         android:name="com.quantam.it.assignment.ui.home.fragments.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_log_out"
         tools:layout="@layout/fragment_slideshow" />
+
 </navigation>
