--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.fragments.slideshow.SlideshowFragment" >
+    tools:context=".ui.home.fragments.logOut.SlideshowFragment" >
 
     <TextView
         android:id="@+id/text_slideshow"
