sign in code cleaned

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,8 +19,8 @@
 
     <fragment
         android:id="@+id/nav_log_out"
-        android:name="com.quantam.it.assignment.ui.home.fragments.logOut.SlideshowFragment"
+        android:name="com.quantam.it.assignment.ui.home.fragments.logOut.LogOutFragment"
         android:label="@string/menu_log_out"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_log_out" />
 
 </navigation>
